force-app/main/default/objects/SPM_Stats__c/SPM_Stats__c.object-meta.xml
<CustomObject>
    <label>SPM Stats</label>
    <nameField>
        <displayFormat>SN-{00000}</displayFormat>
        <label>SPM Stats Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>