force-app/main/default/objects/SPM_Stats__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPM Stats</relationshipLabel>
    <relationshipName>SPM_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>