force-app/main/default/objects/SPM_Stats__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>SPM Stats</relationshipLabel>
    <relationshipName>SPM_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>