force-app/main/default/objects/SPM_Stats__c/fields/Invoiced_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Value__c</fullName>
    <formula>IF(TEXT( Order__r.XC_Order_Status__c )= &apos;Invoiced&apos;,
Order_Product__r.Quantity *  Order_Product__r.UnitPrice ,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>