force-app/main/default/objects/SPM_Stats__c/fields/Open_Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Actual_Amount__c</fullName>
    <label>Open Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>