force-app/main/default/objects/SPM_Stats__c/fields/Open_Value__c.field-meta.xml
<CustomField>
    <fullName>Open_Value__c</fullName>
    <formula>IF( TEXT(Order__r.XC_Order_Status__c) != &apos;Invoiced&apos;  &amp;&amp; TEXT(Order__r.XC_Order_Status__c) != &apos;Canceled&apos;,
Order_Product__r.UnitPrice *  Order_Product__r.Quantity ,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>