force-app/main/default/objects/SPM_Stats__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>SPM Stats</relationshipLabel>
    <relationshipName>SPM_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>