force-app/main/default/objects/SPM_Stats__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>SPM Stats</relationshipLabel>
    <relationshipName>SPM_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>