force-app/main/default/objects/SPM_Stats__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SPM Stats</relationshipLabel>
    <relationshipName>SPM_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>