force-app/main/default/objects/SPM_Stats__c/fields/Quarterly_Type__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Type__c</fullName>
    <label>Quarterly Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>