force-app/main/default/objects/SPM_Stats__c/fields/Target_Config__c.field-meta.xml
<CustomField>
    <fullName>Target_Config__c</fullName>
    <label>Target Config</label>
    <referenceTo>Target_Config__c</referenceTo>
    <relationshipLabel>SPM Stats</relationshipLabel>
    <relationshipName>SPM_Stats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>