force-app/main/default/objects/SPM_Stats__c/fields/Target_Key__c.field-meta.xml
<CustomField>
    <fullName>Target_Key__c</fullName>
    <formula>TEXT(Financial_Year__c) + &apos;-&apos; + BDD__c + &apos;-&apos; + BDM__c + &apos;-&apos; + Account__c + &apos;-&apos; + Business_Unit__c + &apos;-&apos; + TEXT(Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Key</label>
    <type>Text</type>
</CustomField>