force-app/main/default/objects/SPM_Stats__c/fields/Year_Stats__c.field-meta.xml
<CustomField>
    <fullName>Year_Stats__c</fullName>
    <label>Year Stats</label>
    <referenceTo>Year_Stats__c</referenceTo>
    <relationshipLabel>SPM Stats</relationshipLabel>
    <relationshipName>SPM_Stats</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>