force-app/main/default/objects/SPM_Stats__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Actual_Amount__c</columns>
    <columns>BDD__c</columns>
    <columns>BDM__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Financial_Year__c</columns>
    <columns>Month__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Product__c</columns>
    <columns>Product__c</columns>
    <columns>Target_Config__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>